<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Papyros Progress: An Android application showing the development progress of Papyros
  ~ Copyright (C) 2016  Tein van der Lugt
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
    <string name="app_name">Papyros Progress</string>

    <string name="appwidget_contentDescription">Progress to next Papyros release milestone</string>
    <string name="text_size">Text size: %1$d</string>
    <string name="ok">Apply</string>
    <string name="open_issues">Open issues: %1$d</string>
    <string name="closed_issues">Closed issues: %1$d</string>
    <string name="progress">Progress: %1$d%%</string>
    <string name="state">State: %1$s</string>
    <string name="unknown">Unknown</string>
    <string name="no_network">Not connected to a network</string>
    <string name="error403">Error 403. Please check again later.</string>
    <string name="error404">Error %1$d</string>
    <string name="created_at">Created at: %1$s</string>
    <string name="updated_at">Updated at: %1$s</string>
    <string name="due_on">Due on: %1$s</string>
    <string name="closed_at">Closed at: %1$s</string>
    <string name="offline_snackbar">Offline mode: data may be out of date</string>
    <string name="visit_homepage">Visit Papyros homepage</string>
    <string name="visit_github">Visit Github page</string>
    <string name="view_on_github">View on Github</string>
    <string name="show_notification">Show notifications</string>
    <string name="notific_msg_text_format" formatted="false">%1$s changed from %2$d to %3$d%%.</string>
    <string name="notification_dialog_message">Would you like to receive a notification when the progress is updated?</string>
    <string name="use_old_progress_bar">Use old progress bar</string>
    <string name="rate_in_play_store">Rate in Play Store</string>
    <string name="notification_title">Papyros updates</string>
    <string name="milestone_added_notification" formatted="false">The milestone \"%1$s\" has been created.</string>
    <string name="milestone_removed_notification" formatted="false">The milestone \"%1$s\" has been removed.</string>
    <string name="blog_notification_content">A Papyros blog post has been added</string>
    <string name="state_open">open</string>
    <string name="state_closed">closed</string>
    <string name="state_all">all</string>
    <string name="widget_settings">Widget settings</string>
    <string name="xs_collapse_or_expand">Collapse or expand milestone</string>
    <string name="collapsed_progress_text" formatted="false">&#160;—&#160;%1$d%%</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="notification_sound">Sound</string>
    <string name="notification_vibrate">Vibrate</string>
    <string name="other">Other</string>
    <string name="pulse_notification_light">Pulse notification light</string>
    <string name="custom_tabs_preference_title">Open web pages in app</string>
    <string name="custom_tabs_preference_summary_on">Now opening web pages in app (if available)</string>
    <string name="custom_tabs_preference_summary_off">Now opening web pages in standard browser</string>
</resources>
