<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/visitHomepage"
        android:orderInCategory="100"
        android:title="@string/visit_homepage"
        app:showAsAction="never" />
    <item
        android:id="@+id/visitGithub"
        android:orderInCategory="101"
        android:title="@string/visit_github"
        app:showAsAction="never" />
    <item
        android:id="@+id/notification"
        android:checkable="true"
        android:checked="true"
        android:orderInCategory="102"
        android:title="@string/show_notification"
        app:showAsAction="never" />
    <item
        android:id="@+id/issue_notification"
        android:orderInCategory="103"
        android:title="Issue notification"
        app:showAsAction="never" />
</menu>