<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold"
        tools:text="Version 0.1" />

    <TextView
        android:id="@+id/open_issues_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_issues" />

    <TextView
        android:id="@+id/closed_issues_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/closed_issues" />

    <ProgressBar
        android:id="@+id/listItem_progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/progress_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress" />
</LinearLayout>